# mcp-customer-support-tickets

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  design-one-page.html  design.html  diagram.mmd  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  railway.json  review-data.js  review.html
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-16-mcp-customer-support-tickets-implementation.md
docs/superpowers/specs/: 2026-06-16-mcp-customer-support-tickets-design.md
scripts/: rename-commits.sh
src/mcp_cst/: __init__.py  config.py  docs.py  embedder.py  errors.py  safety.py  server.py
src/mcp_cst/data/: aggregates.py  ingest.py  store.py
src/mcp_cst/llm/: anthropic_client.py  openai_client.py  protocol.py
src/mcp_cst/prompts/: draft_reply.py
src/mcp_cst/resources/: schema.py  ticket.py
src/mcp_cst/retrieval/: hybrid.py  rerank.py  search_cache.py
src/mcp_cst/tools/: aggregate_tickets.py  create_ticket.py  delete_ticket.py  get_ticket.py  get_tickets.py  search_and_fetch.py  search_tickets.py  server_info.py  update_ticket.py
tests/: conftest.py
tests/eval/: conftest.py  metrics.py  test_facets.py  test_known_item.py  test_metrics.py
tests/fixtures/: build_fixture.py  tickets.json
tests/integration/: test_rag_full_eval.py  test_real_embedder.py
tests/integration/rag_eval/: _scenarios.py  conftest.py  test_facets.py  test_grounding.py  test_known_item.py  test_latency.py  test_robustness.py  test_semantics.py
tests/unit/: test_aggregate_tickets.py  test_aggregates.py  test_config.py  test_create_ticket.py  test_delete_ticket.py  test_descriptions.py  test_docs.py  test_draft_reply.py  test_errors.py  test_get_ticket.py  test_get_tickets.py  test_hybrid.py  test_ingest.py  test_llm_clients.py  test_rerank.py  test_safety.py  test_schema_resource.py  test_search_and_fetch.py  test_search_tickets.py  test_server_info.py  test_server_init.py  test_store.py  test_ticket_resource.py  test_tool_annotations.py  test_update_ticket.py
