[project]
name = "mcp-customer-support-tickets"
version = "0.1.0"
description = "Read-only MCP server for the Tobi-Bueck customer-support-tickets dataset."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tal" }]
dependencies = [
    "mcp[cli]>=1.2",
    "lancedb>=0.18",
    "polars>=1.20",
    "pyarrow>=18.0",
    "datasets>=3.0",
    "sentence-transformers>=3.0",
    "platformdirs>=4.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "torch>=2.5",
]

# Opt-in CUDA wheel: `uv sync --extra cuda` (default install uses CPU torch).
[project.optional-dependencies]
cuda = ["torch>=2.5"]

[project.scripts]
mcp-customer-support-tickets = "mcp_cst.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --ignore=tests/integration"
markers = [
    "integration: tests that download model weights / hit network",
]
