[project]
name = "mcp-customer-support-tickets"
version = "0.1.0"
description = "Read-only MCP server for the Tobi-Bueck customer-support-tickets dataset."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tal" }]
dependencies = [
    "mcp[cli]>=1.2",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "datasets>=3.0",
    "sentence-transformers>=3.0",
    "platformdirs>=4.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "torch>=2.5",
]

[project.scripts]
mcp-customer-support-tickets = "mcp_cst.server:main"

# Pull torch from the PyTorch CUDA 12.4 wheel index so embedding can use
# a local GPU when available. Runtime auto-falls back to CPU when no GPU
# is present, so the same wheel works on CI / Railway / laptops.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --ignore=tests/integration"
markers = [
    "integration: tests that download model weights / hit network",
]
